--- a/manifest.json
+++ b/manifest.json
@@ -1673,6 +1673,162 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.AnimalCompanion.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.AnimalCompanion.html",
+          "hash": "OvtbblX68KQIQ6Vaig7pkw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.AnimationSpeedMultiplier.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.AnimationSpeedMultiplier.html",
+          "hash": "w4pT/Mcvk8fSkCvJLg66DQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.Execute.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.Execute.html",
+          "hash": "6zQyF29fRhG7zC/6KNMwHw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.HideousAppendages.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.HideousAppendages.html",
+          "hash": "HNqZDoOZewe/QJvzAXgksA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.ProvidesIncome.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.ProvidesIncome.html",
+          "hash": "OwgymuHb+z8kSy9ZiYBi2g=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.RegionRestricted.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.RegionRestricted.html",
+          "hash": "sJ3axFVQeJ9CHPSimaQyuQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.ResurrectionAura.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.ResurrectionAura.html",
+          "hash": "VPoyH+mLMBu4Ei9PRleCYA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.SpellResistanceAura.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.SpellResistanceAura.html",
+          "hash": "2Gk8YsSFzcij9LjkiRStBA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilities.html",
+          "hash": "EDPoh8beyP18zLjPQU0vUA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilitySystem.PassiveAbility.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilitySystem.PassiveAbility.html",
+          "hash": "L43uQfzsfPylCChuxJv1Rg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilitySystem.PassiveAbilityManager.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilitySystem.PassiveAbilityManager.html",
+          "hash": "B1ly79eCOl1LauEe3qkMdQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilitySystem.TakeDamagePassiveAbility.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilitySystem.TakeDamagePassiveAbility.html",
+          "hash": "FxdPoYq+wXISMDjTIMsoyw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilitySystem.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.PassiveAbilitySystem.html",
+          "hash": "+liyFwcyUu+RLWihu3kNzg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.Powers.DummyPower.yml",
       "output": {
         ".html": {
@@ -2409,7 +2565,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.SpellSystem.SpellSystem.html",
-          "hash": "IWRoEfi39e2YPH2nm67FOg=="
+          "hash": "aTLOA6i0GMH1zru+csf8RQ=="
         }
       },
       "is_incremental": false,
@@ -2429,35 +2585,11 @@
     },
     {
       "type": "ManagedReference",
-      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.SpellSystem.TakeDamageEffect.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.SpellSystem.TakeDamageEffect.html",
-          "hash": "oDGTtPha9XumJQe+cxc+MA=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.SpellSystem.UnitEffect.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.SpellSystem.UnitEffect.html",
-          "hash": "/G3SxmYO5eL7HwpgCu3A2w=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
       "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.SpellSystem.yml",
       "output": {
         ".html": {
           "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.SpellSystem.html",
-          "hash": "MB/6VR5hE+BhRvE/sm0i0w=="
+          "hash": "T7iF3HHTLQUuzoFtxvdDIw=="
         }
       },
       "is_incremental": false,
@@ -2709,7 +2841,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.Spells.Vengeance.html",
-          "hash": "c9rPzS6JJa6e3XAWFJrSGQ=="
+          "hash": "wzpPOFZJ7GXSNokcXTVJIA=="
         }
       },
       "is_incremental": false,
@@ -2782,114 +2914,6 @@
         ".html": {
           "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitCategory.html",
           "hash": "VI1+gLPAmRqilZO22/KO6A=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.AnimalCompanion.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.AnimalCompanion.html",
-          "hash": "hho4PSm6R68YSA7WAb8x/Q=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.AnimationSpeedMultiplier.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.AnimationSpeedMultiplier.html",
-          "hash": "pRhLDZhCAGI6VOUNTeFe9Q=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.Execute.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.Execute.html",
-          "hash": "rLL2Yek8W2pd1xPIAgXtGw=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.HideousAppendages.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.HideousAppendages.html",
-          "hash": "MBSLV0dXCYx+e7gbGMijiA=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.ProvidesIncome.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.ProvidesIncome.html",
-          "hash": "ByWTgWU3HVzZO09hUeqYzg=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.RegionRestricted.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.RegionRestricted.html",
-          "hash": "b1rLdGs3oFkgt0ZWZGYgUA=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.ResurrectionAura.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.ResurrectionAura.html",
-          "hash": "MU+hYnXWu1fX7i8EujSF+Q=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.SpellResistanceAura.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.SpellResistanceAura.html",
-          "hash": "9Tx51ngfNvWNZJ6tBTxK+Q=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api-macroTools/AzerothWarsCSharp.MacroTools.UnitEffects.html",
-          "hash": "/mP/amakrPDUWaIIb59jnQ=="
         }
       },
       "is_incremental": false,
@@ -3057,7 +3081,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/toc.html",
-          "hash": "y1NvzKudfCJtRyd7/FQrtQ=="
+          "hash": "v3iWJm//4eRY/gDnG06HKA=="
         }
       },
       "is_incremental": false,
@@ -3641,11 +3665,11 @@
     },
     {
       "type": "ManagedReference",
-      "source_relative_path": "api-source/AzerothWarsCSharp.Source.Mechanics.BlackEmpire.HeraldUnitEffect.yml",
+      "source_relative_path": "api-source/AzerothWarsCSharp.Source.Mechanics.BlackEmpire.HeraldPassiveAbility.yml",
       "output": {
         ".html": {
-          "relative_path": "api-source/AzerothWarsCSharp.Source.Mechanics.BlackEmpire.HeraldUnitEffect.html",
-          "hash": "3RXz5rFXGrbOSbxudRL5Ng=="
+          "relative_path": "api-source/AzerothWarsCSharp.Source.Mechanics.BlackEmpire.HeraldPassiveAbility.html",
+          "hash": "mK5GmPUWDNFmcPeM2AgMTA=="
         }
       },
       "is_incremental": false,
@@ -3669,7 +3693,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/AzerothWarsCSharp.Source.Mechanics.BlackEmpire.html",
-          "hash": "qcl1YOnARKAZThJppoSZDw=="
+          "hash": "baBrkudypqe6KTrct6LC7g=="
         }
       },
       "is_incremental": false,
@@ -3717,7 +3741,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/AzerothWarsCSharp.Source.Mechanics.Goblins.OilProducer.html",
-          "hash": "UYaHvggMoQJ1pD+WXdCIBw=="
+          "hash": "C3sQIscBNznLZoGTlp9VKg=="
         }
       },
       "is_incremental": false,
@@ -3729,7 +3753,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/AzerothWarsCSharp.Source.Mechanics.Goblins.OilRigConstructor.html",
-          "hash": "X0EcXiLP665IHS1ZQqE3ww=="
+          "hash": "SwBL8/QvUEt6Xq82I5oSfQ=="
         }
       },
       "is_incremental": false,
@@ -3741,7 +3765,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/AzerothWarsCSharp.Source.Mechanics.Goblins.OilUser.html",
-          "hash": "uqGQS2KZ9DxMTW0CdRrN/A=="
+          "hash": "bOyl5gj2f4vxrBn5fN8LYg=="
         }
       },
       "is_incremental": false,
@@ -3753,7 +3777,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/AzerothWarsCSharp.Source.Mechanics.Goblins.Trader.html",
-          "hash": "t0POSGXtmaIk8SfzDkFyoA=="
+          "hash": "MN6M1V0FexLOuApTd7ecHQ=="
         }
       },
       "is_incremental": false,
@@ -6285,7 +6309,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/AzerothWarsCSharp.Source.Setup.FactionSetup.BlackEmpireSetup.html",
-          "hash": "MgIW2yRUqBoSdZvUofquIg=="
+          "hash": "d5A7wV8yBc5LI1pS9voRzQ=="
         }
       },
       "is_incremental": false,
@@ -6597,7 +6621,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/AzerothWarsCSharp.Source.Setup.GameSetup.html",
-          "hash": "yum3XQQo15JZXO/xg53qSA=="
+          "hash": "D6wEglKqA/Ajf+T687FQ4w=="
         }
       },
       "is_incremental": false,
@@ -7269,7 +7293,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/AzerothWarsCSharp.Source.Setup.Spells.GoblinSpellSetup.html",
-          "hash": "l7scj6Ij04a0cJPUsLVuPg=="
+          "hash": "2cbThyuEUlyJoY7icuv5HA=="
         }
       },
       "is_incremental": false,
@@ -7329,7 +7353,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/AzerothWarsCSharp.Source.Setup.SpellsSetup.html",
-          "hash": "wnD8sESIU/AEy4QQDN6asw=="
+          "hash": "UPjG81KrfVkg+IaaqzGB+Q=="
         }
       },
       "is_incremental": false,
@@ -7449,7 +7473,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/toc.html",
-          "hash": "dMsRs9sZ1U9LjAfc68YbTw=="
+          "hash": "9Ofo6SGuQx62A64UHgQelg=="
         }
       },
       "is_incremental": false,
@@ -7524,7 +7548,7 @@
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 619,
+          "total_file_count": 621,
           "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
